<resources>
    <string name="app_name">Flutter Pakistan</string>
    <string name="welcome_to_flutter_pakistan">Welcome To Flutter Pakistan</string>
    <string name="swipe_left_to_proceed">Swipe left to proceed</string>
    <string name="desc_get_info">Get Information about events, their agendas and register yourself as an attendee</string>
    <string name="get_started">Get Started</string>
    <string name="title_register">REGISTER | ATTEND | BUILD</string>
    <string name="office_address">8th floor, Parsa Tower, Main Shahrah-e-Faisal, Karachi</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="venue">Venue</string>
    <string name="schedule">Schedule</string>
    <string name="flutter_live_extended_19">Flutter live extended \'19</string>
    <string name="event_date">Mar 16, 2019</string>
    <string name="hrs">HRS</string>
    <string name="title_registration">Registration</string>
    <string name="msg_add_phone">Add your phone number in order to\nreceive events updates.</string>
    <string name="hint_mobile_number">Mobile number</string>
    <string name="btn_next">Next</string>
    <string name="back">back</string>
    <string name="student">student</string>
    <string name="msg_occupation">Which one of the following best\ndescribes you?</string>
    <string name="professional">Professional</string>
    <string name="done">done</string>
    <string name="institute">Institute</string>
    <string name="desc_study">Where did you study?</string>
    <string name="workplace">Workplace</string>
    <string name="desc_work">Where do you work?</string>
    <string name="designation">Designation</string>
    <string name="msg_desgination">What your designation at</string>
    <string name="error_desgination_required">Designation Required</string>
    <string name="error_workplace">WorkPlace Required</string>
    <string name="institue_required">Institute Required</string>
    <string name="register">Register</string>
    <string name="navigate">Navigate</string>
    <string name="error_phone_required">You wouldn\'t want to miss any important update! Please enter a valid mobile number</string>
    <string name="skip">SKIP</string>
    <string name="msg_contribute">In what capacity do you want to contribute to Flutter community?</string>
    <string name="continued">Continue</string>
    <string name="error_contributionRequired">Please select at least one option. You can also SKIP this step from the top right corner of this screen</string>
    <string name="error_no_schedule">Oops! No Schedule</string>
    <string name="dash">-</string>
    <string name="font_size_10sp">10sp</string>
    <string name="about_speaker">About Speaker</string>
    <string name="sign_out">Sign Out</string>
    <string name="desc_session_feedback">You can provide session feedback after this   event days ends.</string>
    <string name="want_to_contribute">Want to contribute?</string>
    <string name="built_with_kotlin_amp_material"><![CDATA[Built with Kotlin & Material]]></string>
    <string name="loading">loading...</string>
    <string name="success">Success!</string>
    <string name="registration_complete">You are registered successfully! \n You will receive a confirmation message soon!</string>
    <string name="cool">COOL!</string>

    <string-array name="contributionTypes">
        <item>Volunteer</item>
        <item>Administration &amp; Logistics</item>
        <item>Speaker</item>
        <item>Social media marketing</item>
    </string-array>
</resources>
