<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/relPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="@dimen/activity_margin"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_phone_setup" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            style="@style/ParagraphText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgPhone"
            android:layout_marginTop="15dp"
            android:text="@string/desc_study" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputWorkPlace"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:counterEnabled="true"
            app:counterMaxLength="50">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/institute"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <View
        android:id="@+id/viewBorder"
        style="@style/Border"
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_below="@+id/relPhone" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnBack"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewBorder"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="@dimen/activity_margin"
        android:drawableLeft="@drawable/ic_arrow_back"
        android:text="@string/back" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnDone"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewBorder"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="@dimen/activity_margin"
        android:drawableRight="@drawable/ic_check_circle"
        android:text="@string/done" />
</RelativeLayout>