<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OnBoardingStepOneFragments">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/splash_image"
        android:layout_height="@dimen/splash_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_loader" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:gravity="center"
            android:text="@string/title_register"
            android:textSize="@dimen/activity_margin" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ParagraphText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/margin_between"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:gravity="center"
            android:text="@string/desc_get_info"
            android:textSize="@dimen/subtitle_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetStarted"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/margin_between"
            android:backgroundTint="@color/buttonBackground"
            android:paddingLeft="@dimen/margin_between"
            android:paddingRight="@dimen/margin_between"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>