<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    tools:context=".fragments.ScheduleListFragment">

    <RelativeLayout
        android:id="@+id/relHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/activity_margin"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgUser"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:gravity="left|top"
            android:src="@drawable/ic_person" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/flutter_live_extended_19"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:gravity="center"
            android:text="@string/event_date"
            android:textColor="@android:color/darker_gray" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerScheduleList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relHeader"
        android:overScrollMode="never" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtNoSchedule"
        style="@style/ParagraphText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/loading"
        android:textColor="@color/textColorGrey" />

</RelativeLayout>