<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/relPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="@dimen/activity_margin"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgOne"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/imgTwo"
                app:srcCompat="@drawable/ic_work" />

            <ImageView
                android:id="@+id/imgTwo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/ic_mac" />

            <ImageView
                android:id="@+id/imgThree"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/imgTwo"
                app:srcCompat="@drawable/ic_school" />
        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            style="@style/ParagraphText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgPhone"
            android:layout_marginTop="10dp"
            android:text="@string/msg_occupation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnStudent"
                style="@style/ButtonOccputation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/student" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnProfessional"
                style="@style/ButtonOccputation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professional" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/viewBorder"
        style="@style/Border"
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_below="@+id/relPhone" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnBack"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewBorder"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="@dimen/activity_margin"
        android:drawableLeft="@drawable/ic_arrow_back"
        android:text="@string/back" />
</RelativeLayout>